# esp-idf-iot-easy

./: .gitignore
components/algobsec/: CMakeLists.txt  bsec_integration.c  component.mk
components/algobsec/include/: bsec_datatypes.h
components/amphenol_ge_17xx/: CMakeLists.txt  Kconfig  amphenol_ge_17xx.c  amphenol_ge_17xx.h  calc.m
components/analog_sen/: CMakeLists.txt  Kconfig  analog_sen.c  analog_sen.h  component.mk
components/bme680/: CMakeLists.txt  Kconfig  bme680.c  bme680.h  component.mk
components/bmp280/: CMakeLists.txt  bmp280.c  bmp280.h  component.mk
components/circular_buffer/: CMakeLists.txt  Kconfig  circ_buff.c  circ_buff.h  component.mk
components/i2cdev/: i2cdev.c  i2cdev.h
components/mcp42x1/: CMakeLists.txt  mcp42x1.c  mcp42x1.h
components/modern_wind/: CMakeLists.txt  Kconfig  modern_wind.c  modern_wind.h
components/passive_components/: CMakeLists.txt  Kconfig  component.mk  passive_components.c  passive_components.h
components/pms1003/: CMakeLists.txt  Kconfig  component.mk  pms1003.c  pms1003.h
components/press_sen/: CMakeLists.txt  Kconfig  component.mk  press_sen.c  press_sen.h
components/seeed_yf/: CMakeLists.txt  Kconfig  README.md  component.mk  seeed_yf.c  seeed_yf.h
components/senseair_k30/: CMakeLists.txt  Kconfig  senseair_k30.c  senseair_k30.h
components/sfa30/: CMakeLists.txt  Kconfig  sfa30.c  sfa30.h
components/sht85/: CMakeLists.txt  Kconfig  sht85.c  sht85.h
components/sls_bta/: CMakeLists.txt  Kconfig  sls_bta.c  sls_bta.h
components/switch_sen/: CMakeLists.txt  Kconfig  component.mk  (+2 more)
(+33 files in other folders)
